# aijvm

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  UbuntuRequirements.txt  launch.json.txt  pom.xml
bugs/: 03-forget-adding-packages.md
docs/: 01-Cloude-Prompt-CommandLineParse.md  02-Claude-Prompt-Logs.md  03-Claude-Prompt-jmod-file-reader-amending-1.md  03-Claude-Prompt-jmod-file-reader-bug-fixing.md  03-Claude-Prompt-jmod-file-reader.md  04-Claude-Prompt-classs-file-parsing.md  05-Claude-Prompt-classloader.md  06-Claude-Prompt-RuntimeData.md  07-Claude-Prompt-ExecuteEngine-1.md  08-Claude-Prompt-Update-Main.md  09-Claude-Prompt-ExecuteEngine-2.md  0X-Claude-Prompt-Util.md  0x-Claude-Prompt-Main.md  10-Claude-Prompt-ExecuteEngine-nativemethod-1.md  11-Claude-Prompt-ExecuteEngine-class-init.md  12-Claude-Prompt-ExecuteEngine-fix-error.md  13-Claude-Prompt-MultipleThread-1.md  14-Claude-Prompt-MultipleThread-fix-error.md  15-Claude-Prompt-Swap-GC.md  16-Claude-Prompt-Swap-GC-fix-error.md  17-Claude-Prompt-fix-vs2026-building-error.md  18-Claude-Prompt-update-readme.md  19-Claude-Prompt-ExecuteEngine-class-init-optimization.md  20-Claude-Prompt-Auto-gc.md  21-Claude-Prompt-gc-stop-world.md  22-Claude-Prompt-gc-fix-error.md  23-Claude-Prompt-gc-fix-error-2.md  24-Claude-Prompt-gc-refine-gc-roots.md  Gemini-Prompt.md
docs/jvms26/: jvm_spec_chapter_1_introduction.md  jvm_spec_chapter_2_the_structure_of_the_java_virtual_machine.md  jvm_spec_chapter_3_compiling_for_the_java_virtual_machine.md  jvm_spec_chapter_4_the_class_file_format.md  jvm_spec_chapter_5_loading_linking_and_initializing.md  jvm_spec_chapter_6_the_java_virtual_machine_instruction_set.md  jvm_spec_chapter_7_opcode_mnemonics_by_opcode.md
include/classfile/: class_file.h  jmod_reader.h
include/classloader/: class_loader.h
include/cli/: command_line_parser.h
include/engine/: jvm_engine.h
include/natives/: java_io_PrintStream.h  java_lang_Class.h  java_lang_Object.h  java_lang_StringBuilder.h  java_lang_System.h  java_lang_Thread.h
include/runtime/: frame.h  heap.h  interpreter.h  java_thread.h  native_registry.h  opcode.h  safepoint.h  slot.h
include/utils/: file_reader.h  logger.h
src/: ClassFile.cpp  main.cpp
src/classfile/: class_file.cpp  jmod_reader.cpp
src/classloader/: class_loader.cpp
src/cli/: command_line_parser.cpp
src/engine/: jvm_engine.cpp
src/include/: ClassFile.h
src/main/java/com/aijvm/: ClassFile.java  ClassFileParser.java  ConstantPool.java  Frame.java  JvmObject.java  Main.java  NanoJVM.java  Opcodes.java
src/natives/: java_io_PrintStream.cpp  java_lang_Class.cpp  java_lang_Object.cpp  java_lang_StringBuilder.cpp  java_lang_System.cpp  java_lang_Thread.cpp
src/runtime/: frame.cpp  heap.cpp  interpreter.cpp  java_thread.cpp  native_registry.cpp  safepoint.cpp  slot.cpp
src/test/java/com/aijvm/: ClassFileParserTest.java  NanoJVMTest.java
src/utils/: file_reader.cpp  logger.cpp
tests/: CMakeLists.txt  ClassFileTest.cpp  class_file_parser_test.cpp  class_loader_test.cpp  command_line_parser_test.cpp  dummy_test.cpp  file_reader_test.cpp  interpreter_test.cpp  jmod_reader_test.cpp  runtime_test.cpp
tests/javaclasses/: GCStressTest.java  GCTest.java  HelloAdd.java  HelloWorld.java  ProduceConsumer.java  StaticBlockTest.java  StaticInitTest.java
